editor-components/slider/slider10/slider10.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  padding: 0 !important;

  .max-content {
    .slider-wrapper {
      height: 100%;
      width: 100%;
      position: relative;

      .carousel {
        position: relative;

        :global(.slick-list) {
          overflow: hidden;
        }

        :global(.slick-track) {
          display: flex;
          align-items: stretch;
        }

        :global(.slick-slide) {
          height: auto;

          >div {
            height: 100%;
          }
        }

        :global(.slick-dots) {
          top: var(--composer-gap-md);
          left: 50%;
          transform: translateX(-50%);
          width: auto !important;
          display: flex !important;
          flex-direction: row;
          z-index: 100;
          gap: var(--composer-gap-md);

          li {
            margin: var(--composer-gap-sm) 0;
            width: var(--composer-gap-sm);
            height: var(--composer-gap-sm);

            button {
              width: var(--composer-gap-sm);
              height: var(--composer-gap-sm);
              padding: 0;
              background: transparent;
              border: none;
              cursor: pointer;
              position: relative;

              &:before {
                content: "";
                position: absolute;
                top: 0;
                left: 0;
                width: var(--composer-gap-sm);
                height: var(--composer-gap-sm);
                border-radius: var(--composer-border-radius-full);
                background: var(--composer-font-color-secondary);
                opacity: 0.5;
                transition: transform var(--composer-transition-duration-normal) ease, opacity var(--composer-transition-duration-normal) ease, background var(--composer-transition-duration-normal) ease;
                transform: scale(0.8);
                line-height: unset;
              }
            }

            &:global(.slick-active) {
              button:before {
                transform: scale(1.2);
                opacity: 1;
              }
            }
          }
        }
      }

      :global(.slick-prev) {
        left: var(--composer-gap-md);
        z-index: 100;
      }

      :global(.slick-next) {
        right: var(--composer-gap-md);
        z-index: 100;
      }

      .card {
        height: 100%;

        .slider-item {
          width: 100%;
          min-height: 50vh;
          height: stretch;
          display: flex;
          justify-content: center;
          align-items: center;
          position: relative;
          transition: 500ms;
          overflow: hidden;

          .slider-item-media {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            object-fit: cover;
            z-index: 0;
          }

          .content-wrapper {
            max-width: var(--composer-content-width);
            width: 100%;
            z-index: 2;
            position: relative;
            display: flex;
            align-items: center;
            padding: 80px var(--composer-gap-xl);
            margin-bottom: 70px;
            margin-top: 70px;
            overflow: hidden;

            .vertical-content {
              width: 100%;
              align-items: center;
              text-align: center;
            }
          }

          .slider-item-subtitle-wrapper {
            width: 100%;
            display: flex;
          }

          .slider-item-subtitle {
            transition: 700ms;
            opacity: 0;

            &.slider-item-subtitle-with-media {
              color: #ffffff;
              background: transparent;

              &::before {
                background: #ffffff;
              }
            }

            &.show {
              opacity: 1;
            }
          }

          .slider-item-title {
            width: 100%;
            transition: 700ms;
            opacity: 0;

            &.slider-item-title-with-media {
              color: #ffffff;
            }

            &.show {
              margin-bottom: var(--composer-gap-md);
              opacity: 1;
            }
          }

          .slider-item-description {
            width: 100%;
            transition: 700ms;
            opacity: 0;

            &.slider-item-description-with-media {
              color: #ffffff;
            }

            &.show {
              margin-bottom: var(--composer-gap-lg);
              opacity: 1;
            }
          }

          .slider-item-overlay {
            width: 100%;
            height: 100%;
            background-color: var(--composer-overlay-color);
            position: absolute;
            top: 0;
            left: 0;
            z-index: 1;
            pointer-events: none;
          }
        }
      }
    }
  }

  .footer-max-content {
    position: absolute;
    bottom: 0;
    right: 0;
    z-index: 10;
    display: flex;

    .slider-footer {
      border-top-left-radius: var(--composer-border-radius-md);
      background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
      display: flex;
      justify-content: center;
      align-items: stretch;

      .slider-footer-items {
        height: 100%;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        padding: var(--composer-gap-md) var(--composer-gap-md) var(--composer-gap-md) var(--composer-gap-md);
        gap: var(--composer-gap-md);

        .slider-footer-item {
          display: flex;
          align-items: flex-start;
          gap: var(--composer-gap-sm);
          flex: 1;

          .slider-footer-item-media {
            width: 200px;
            height: 100px;
            object-fit: cover;
            border-radius: var(--composer-border-radius-sm);
            transition: 500ms;
            transition-property: transform;
            flex-shrink: 0;

            &.hover-animation:hover {
              transform-origin: center;
              transform: rotate(5deg);
            }
          }

          .slider-footer-item-body {
            flex: 1;
            width: 50%;
            display: flex;
            justify-content: center;
            align-items: flex-start;
            flex-direction: column;
            gap: var(--composer-gap-xs);
            max-height: 130px;
            text-align: left;

            .slider-footer-item-title {
              margin: 0;
              color: var(--composer-font-color-primary);
              text-align: left;
            }

            .slider-footer-item-subtitle {
              margin: 0;
              color: var(--composer-tertiary-color);
              text-align: left;
            }
          }
        }

        .half-width {
          flex: 0.5;
        }
      }

      .slider-buttons {
        display: flex;
        flex-direction: column;
        height: 100%;

        .slider-button {
          position: relative;
          border: none;
          background-color: var(--composer-font-color-primary);
          color: var(--composer-html-background);
          transition: 400ms;
          height: 50%;
          cursor: pointer;
          aspect-ratio: 1 / 1;
          min-width: 60px;
          min-height: 60px;
          display: flex;
          align-items: center;
          justify-content: center;

          .slider-button-media {
            width: var(--composer-gap-md);
            height: var(--composer-gap-md);
            font-size: 1.5rem;
            object-fit: contain;
          }

          &:hover {
            color: var(--composer-font-color-primary);
            background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .slider-wrapper {
        .carousel {
          .card {
            .slider-item {
              .content-wrapper {
                padding: 80px var(--composer-gap-lg);

                &.has-arrows .vertical-content {
                  padding: 0 var(--composer-gap-md);
                }
              }
            }
          }
        }

        .footer-max-content {
          width: 100%;
          justify-content: end;
          display: flex;

          .slider-footer {
            .slider-footer-items {
              .slider-footer-item {
                .slider-footer-item-media {
                  width: 150px;
                  height: 75px;
                }

                .slider-footer-item-body {
                  display: none;
                }
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      .slider-wrapper {
        .carousel {
          .card {
            .slider-item {
              .content-wrapper {
                padding: var(--composer-gap-xl) var(--composer-gap-md);

                &.has-arrows .vertical-content {
                  padding: 0 30px;
                }
              }
            }
          }

          :global(.slick-dots) {
            bottom: var(--composer-gap-md);
            top: auto;

            li {
              margin: 0 !important;
              width: var(--composer-gap-xs) !important;
              height: var(--composer-gap-xs) !important;

              button:before {
                transform: scale(0.6) !important;
              }

              &:global(.slick-active) {
                button:before {
                  transform: scale(0.8) !important;
                }
              }
            }
          }
        }
      }

      .footer-max-content {
        .slider-footer {
          .slider-footer-items {
            display: none;
          }

          .slider-buttons {
            flex-direction: row;

            .slider-button {
              min-width: 45px;
              min-height: 45px;
            }
          }
        }
      }
    }
  }
}

